syntax = "proto3";

package student;



message Student {
  string id = 1;
  string nom = 2;
  string email = 3;
  string profCode = 4;

}


message Teacher {
  string id = 1;
  string nom = 2;
  string matiere = 3;
  
}



message GetStudentRequest {
  string student_id = 1;
}

message GetStudentResponse {
  Student student = 1;
}

message SearchStudentsRequest {
  string query = 1;
}

message SearchStudentsResponse {
  repeated Student students = 1;
}

message CreateStudentRequest {
  string student_id = 1;
  string nom = 2;
  string email = 3;
  string profCode = 4;
}

message CreateStudentResponse {
  Student student = 1;
}

message GetTeacherInfoRequest {
  string student_name = 1;
}

message GetTeacherInfoResponse {
  Teacher teacher = 1;
}

service StudentService {
  rpc GetStudent(GetStudentRequest) returns (GetStudentResponse);
  rpc SearchStudents(SearchStudentsRequest) returns (SearchStudentsResponse);
  rpc CreateStudent(CreateStudentRequest) returns (CreateStudentResponse);
  rpc GetTeacherInfo(GetTeacherInfoRequest) returns (GetTeacherInfoResponse);
}
